--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,6 @@
 .wrapper {
   font-family: sans-serif;
   width: 970px;
-  padding-bottom: 1px;
   position: relative;;
 }
 
@@ -46,6 +45,7 @@
   display: inline-block;
 }
 .pythonPNG img {
+  margin-left:20px;
   width:300px;
 }
 form {
@@ -102,12 +102,18 @@ input {
 }
 
 /*content 1*/
+.c1-block {
+  margin-top:10px;
+  position:relative;
+  text-align: center;
+}
 .content-1 {
+  display:inline-block;
   padding: 5px;
-  position:static;
 }
 .c1-links {
-
+  display:inline-block;
+  vertical-align: top;
 }
 .c1-links ul {
   text-align: center;
@@ -116,7 +122,7 @@ input {
   color: white;
 }
 .c1-content {
-
+  display:inline-block;
   width: 70%;
 }
 .content-1 div ul li {
@@ -132,14 +138,24 @@ input {
   height: 5px;
   background-color: #5499bf;
 }
+.c2-block {
+  margin-left:20px;
+  width:75%;
+}
+.c2-block ul {
+  width: 90%;
+  margin-left:40px;
+}
 .content-2 {
   background-color: white;
   display:block;
   text-align: center;
+  padding-bottom:10px;
 }
 .c2-content {
+  vertical-align: top;
   display: inline-block;
-  width:40%;
+  width:43%;
 }
 .c2-content span {
   color: #5499bf;
@@ -153,8 +169,11 @@ input {
 }
 
 /*bottom bar*/
-
+.gradient {
+  background: linear-gradient(#346389, #5499bf);
+}
 .bottom-links {
+  margin-top: 40px;
   text-align:center;
 }
 .bottom-links ul li {
@@ -167,6 +186,7 @@ input {
 }
 .copyright {
   margin: 10px;
+  padding-bottom:5px;
   font-size:.75em;
   text-align: center;
   color: #d8d8d8;
